// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgressStepper > renders correctly when all steps are completed (activeStep not found) > expected html 1`] = `
<div>
  <ol
    class="relative flex w-full flex-col items-stretch gap-4 sm:flex-row sm:gap-2"
  >
    <li
      class="relative flex grow items-start gap-3 sm:min-w-0 sm:flex-1 sm:flex-col"
    >
      <div
        aria-hidden="true"
        class="absolute top-2.5 left-2.25 z-0 mt-2.5 h-full w-0.5 transition-colors duration-200 sm:top-2.75 sm:mt-auto sm:ml-2.5 sm:h-0.5 sm:w-full bg-green-700"
      />
      <div
        aria-hidden="true"
        class="z-10 flex shrink-0 items-center justify-center rounded-full bg-white ring-4 ring-white transition-all duration-200 [&>svg]:size-5 sm:[&>svg]:size-6 text-green-700"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-check"
          data-icon="circle-check"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 512a256 256 0 1 1 0-512 256 256 0 1 1 0 512zM374 145.7c-10.7-7.8-25.7-5.4-33.5 5.3L221.1 315.2 169 263.1c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l72 72c5 5 11.8 7.5 18.8 7s13.4-4.1 17.5-9.8L379.3 179.2c7.8-10.7 5.4-25.7-5.3-33.5z"
            fill="currentColor"
          />
        </svg>
      </div>
      <span
        class="grow overflow-hidden text-left text-sm font-medium text-nowrap text-ellipsis transition-colors duration-200 sm:overflow-auto sm:text-wrap"
      >
        First Step
        <span
          class="sr-only"
        >
          common:stepper.status.completed
        </span>
      </span>
    </li>
    <li
      class="relative flex grow items-start gap-3 sm:min-w-0 sm:flex-1 sm:flex-col"
    >
      <div
        aria-hidden="true"
        class="absolute top-2.5 left-2.25 z-0 mt-2.5 h-full w-0.5 transition-colors duration-200 sm:top-2.75 sm:mt-auto sm:ml-2.5 sm:h-0.5 sm:w-full bg-green-700"
      />
      <div
        aria-hidden="true"
        class="z-10 flex shrink-0 items-center justify-center rounded-full bg-white ring-4 ring-white transition-all duration-200 [&>svg]:size-5 sm:[&>svg]:size-6 text-green-700"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-check"
          data-icon="circle-check"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 512a256 256 0 1 1 0-512 256 256 0 1 1 0 512zM374 145.7c-10.7-7.8-25.7-5.4-33.5 5.3L221.1 315.2 169 263.1c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l72 72c5 5 11.8 7.5 18.8 7s13.4-4.1 17.5-9.8L379.3 179.2c7.8-10.7 5.4-25.7-5.3-33.5z"
            fill="currentColor"
          />
        </svg>
      </div>
      <span
        class="grow overflow-hidden text-left text-sm font-medium text-nowrap text-ellipsis transition-colors duration-200 sm:overflow-auto sm:text-wrap"
      >
        Second Step
        <span
          class="sr-only"
        >
          common:stepper.status.completed
        </span>
      </span>
    </li>
    <li
      class="relative flex grow items-start gap-3 sm:min-w-0 sm:flex-1 sm:flex-col"
    >
      <div
        aria-hidden="true"
        class="z-10 flex shrink-0 items-center justify-center rounded-full bg-white ring-4 ring-white transition-all duration-200 [&>svg]:size-5 sm:[&>svg]:size-6 text-green-700"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-check"
          data-icon="circle-check"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 512a256 256 0 1 1 0-512 256 256 0 1 1 0 512zM374 145.7c-10.7-7.8-25.7-5.4-33.5 5.3L221.1 315.2 169 263.1c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l72 72c5 5 11.8 7.5 18.8 7s13.4-4.1 17.5-9.8L379.3 179.2c7.8-10.7 5.4-25.7-5.3-33.5z"
            fill="currentColor"
          />
        </svg>
      </div>
      <span
        class="grow overflow-hidden text-left text-sm font-medium text-nowrap text-ellipsis transition-colors duration-200 sm:overflow-auto sm:text-wrap"
      >
        Third Step
        <span
          class="sr-only"
        >
          common:stepper.status.completed
        </span>
      </span>
    </li>
  </ol>
</div>
`;

exports[`ProgressStepper > renders correctly with the first step active > expected html 1`] = `
<div>
  <ol
    class="relative flex w-full flex-col items-stretch gap-4 sm:flex-row sm:gap-2"
  >
    <li
      aria-current="true"
      class="relative flex grow items-start gap-3 sm:min-w-0 sm:flex-1 sm:flex-col"
    >
      <div
        aria-hidden="true"
        class="absolute top-2.5 left-2.25 z-0 mt-2.5 h-full w-0.5 bg-gray-300 transition-colors duration-200 sm:top-2.75 sm:mt-auto sm:ml-2.5 sm:h-0.5 sm:w-full"
      />
      <div
        aria-hidden="true"
        class="z-10 flex shrink-0 items-center justify-center rounded-full bg-white ring-4 ring-white transition-all duration-200 [&>svg]:size-5 sm:[&>svg]:size-6 text-blue-600"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-dot"
          data-icon="circle-dot"
          data-prefix="far"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 512a256 256 0 1 1 0-512 256 256 0 1 1 0 512zm0-464a208 208 0 1 0 0 416 208 208 0 1 0 0-416zm0 304a96 96 0 1 1 0-192 96 96 0 1 1 0 192z"
            fill="currentColor"
          />
        </svg>
      </div>
      <span
        class="grow overflow-hidden text-left text-sm text-nowrap text-ellipsis transition-colors duration-200 sm:overflow-auto sm:text-wrap font-semibold text-blue-600"
      >
        First Step
      </span>
    </li>
    <li
      class="relative flex grow items-start gap-3 sm:min-w-0 sm:flex-1 sm:flex-col"
    >
      <div
        aria-hidden="true"
        class="absolute top-2.5 left-2.25 z-0 mt-2.5 h-full w-0.5 bg-gray-300 transition-colors duration-200 sm:top-2.75 sm:mt-auto sm:ml-2.5 sm:h-0.5 sm:w-full"
      />
      <div
        aria-hidden="true"
        class="z-10 flex shrink-0 items-center justify-center rounded-full bg-white ring-4 ring-white transition-all duration-200 [&>svg]:size-5 sm:[&>svg]:size-6 text-gray-300"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle"
          data-icon="circle"
          data-prefix="far"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M464 256a208 208 0 1 0 -416 0 208 208 0 1 0 416 0zM0 256a256 256 0 1 1 512 0 256 256 0 1 1 -512 0z"
            fill="currentColor"
          />
        </svg>
      </div>
      <span
        class="grow overflow-hidden text-left text-sm font-medium text-nowrap text-ellipsis transition-colors duration-200 sm:overflow-auto sm:text-wrap text-black/60"
      >
        Second Step
        <span
          class="sr-only"
        >
          common:stepper.status.upcoming
        </span>
      </span>
    </li>
    <li
      class="relative flex grow items-start gap-3 sm:min-w-0 sm:flex-1 sm:flex-col"
    >
      <div
        aria-hidden="true"
        class="z-10 flex shrink-0 items-center justify-center rounded-full bg-white ring-4 ring-white transition-all duration-200 [&>svg]:size-5 sm:[&>svg]:size-6 text-gray-300"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle"
          data-icon="circle"
          data-prefix="far"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M464 256a208 208 0 1 0 -416 0 208 208 0 1 0 416 0zM0 256a256 256 0 1 1 512 0 256 256 0 1 1 -512 0z"
            fill="currentColor"
          />
        </svg>
      </div>
      <span
        class="grow overflow-hidden text-left text-sm font-medium text-nowrap text-ellipsis transition-colors duration-200 sm:overflow-auto sm:text-wrap text-black/60"
      >
        Third Step
        <span
          class="sr-only"
        >
          common:stepper.status.upcoming
        </span>
      </span>
    </li>
  </ol>
</div>
`;

exports[`ProgressStepper > renders correctly with the last step active > expected html 1`] = `
<div>
  <ol
    class="relative flex w-full flex-col items-stretch gap-4 sm:flex-row sm:gap-2"
  >
    <li
      class="relative flex grow items-start gap-3 sm:min-w-0 sm:flex-1 sm:flex-col"
    >
      <div
        aria-hidden="true"
        class="absolute top-2.5 left-2.25 z-0 mt-2.5 h-full w-0.5 transition-colors duration-200 sm:top-2.75 sm:mt-auto sm:ml-2.5 sm:h-0.5 sm:w-full bg-green-700"
      />
      <div
        aria-hidden="true"
        class="z-10 flex shrink-0 items-center justify-center rounded-full bg-white ring-4 ring-white transition-all duration-200 [&>svg]:size-5 sm:[&>svg]:size-6 text-green-700"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-check"
          data-icon="circle-check"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 512a256 256 0 1 1 0-512 256 256 0 1 1 0 512zM374 145.7c-10.7-7.8-25.7-5.4-33.5 5.3L221.1 315.2 169 263.1c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l72 72c5 5 11.8 7.5 18.8 7s13.4-4.1 17.5-9.8L379.3 179.2c7.8-10.7 5.4-25.7-5.3-33.5z"
            fill="currentColor"
          />
        </svg>
      </div>
      <span
        class="grow overflow-hidden text-left text-sm font-medium text-nowrap text-ellipsis transition-colors duration-200 sm:overflow-auto sm:text-wrap"
      >
        First Step
        <span
          class="sr-only"
        >
          common:stepper.status.completed
        </span>
      </span>
    </li>
    <li
      class="relative flex grow items-start gap-3 sm:min-w-0 sm:flex-1 sm:flex-col"
    >
      <div
        aria-hidden="true"
        class="absolute top-2.5 left-2.25 z-0 mt-2.5 h-full w-0.5 transition-colors duration-200 sm:top-2.75 sm:mt-auto sm:ml-2.5 sm:h-0.5 sm:w-full bg-green-700"
      />
      <div
        aria-hidden="true"
        class="z-10 flex shrink-0 items-center justify-center rounded-full bg-white ring-4 ring-white transition-all duration-200 [&>svg]:size-5 sm:[&>svg]:size-6 text-green-700"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-check"
          data-icon="circle-check"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 512a256 256 0 1 1 0-512 256 256 0 1 1 0 512zM374 145.7c-10.7-7.8-25.7-5.4-33.5 5.3L221.1 315.2 169 263.1c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l72 72c5 5 11.8 7.5 18.8 7s13.4-4.1 17.5-9.8L379.3 179.2c7.8-10.7 5.4-25.7-5.3-33.5z"
            fill="currentColor"
          />
        </svg>
      </div>
      <span
        class="grow overflow-hidden text-left text-sm font-medium text-nowrap text-ellipsis transition-colors duration-200 sm:overflow-auto sm:text-wrap"
      >
        Second Step
        <span
          class="sr-only"
        >
          common:stepper.status.completed
        </span>
      </span>
    </li>
    <li
      aria-current="true"
      class="relative flex grow items-start gap-3 sm:min-w-0 sm:flex-1 sm:flex-col"
    >
      <div
        aria-hidden="true"
        class="z-10 flex shrink-0 items-center justify-center rounded-full bg-white ring-4 ring-white transition-all duration-200 [&>svg]:size-5 sm:[&>svg]:size-6 text-blue-600"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-dot"
          data-icon="circle-dot"
          data-prefix="far"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 512a256 256 0 1 1 0-512 256 256 0 1 1 0 512zm0-464a208 208 0 1 0 0 416 208 208 0 1 0 0-416zm0 304a96 96 0 1 1 0-192 96 96 0 1 1 0 192z"
            fill="currentColor"
          />
        </svg>
      </div>
      <span
        class="grow overflow-hidden text-left text-sm text-nowrap text-ellipsis transition-colors duration-200 sm:overflow-auto sm:text-wrap font-semibold text-blue-600"
      >
        Third Step
      </span>
    </li>
  </ol>
</div>
`;

exports[`ProgressStepper > renders correctly with the second step active > expected html 1`] = `
<div>
  <ol
    class="relative flex w-full flex-col items-stretch gap-4 sm:flex-row sm:gap-2"
  >
    <li
      class="relative flex grow items-start gap-3 sm:min-w-0 sm:flex-1 sm:flex-col"
    >
      <div
        aria-hidden="true"
        class="absolute top-2.5 left-2.25 z-0 mt-2.5 h-full w-0.5 transition-colors duration-200 sm:top-2.75 sm:mt-auto sm:ml-2.5 sm:h-0.5 sm:w-full bg-green-700"
      />
      <div
        aria-hidden="true"
        class="z-10 flex shrink-0 items-center justify-center rounded-full bg-white ring-4 ring-white transition-all duration-200 [&>svg]:size-5 sm:[&>svg]:size-6 text-green-700"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-check"
          data-icon="circle-check"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 512a256 256 0 1 1 0-512 256 256 0 1 1 0 512zM374 145.7c-10.7-7.8-25.7-5.4-33.5 5.3L221.1 315.2 169 263.1c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l72 72c5 5 11.8 7.5 18.8 7s13.4-4.1 17.5-9.8L379.3 179.2c7.8-10.7 5.4-25.7-5.3-33.5z"
            fill="currentColor"
          />
        </svg>
      </div>
      <span
        class="grow overflow-hidden text-left text-sm font-medium text-nowrap text-ellipsis transition-colors duration-200 sm:overflow-auto sm:text-wrap"
      >
        First Step
        <span
          class="sr-only"
        >
          common:stepper.status.completed
        </span>
      </span>
    </li>
    <li
      aria-current="true"
      class="relative flex grow items-start gap-3 sm:min-w-0 sm:flex-1 sm:flex-col"
    >
      <div
        aria-hidden="true"
        class="absolute top-2.5 left-2.25 z-0 mt-2.5 h-full w-0.5 bg-gray-300 transition-colors duration-200 sm:top-2.75 sm:mt-auto sm:ml-2.5 sm:h-0.5 sm:w-full"
      />
      <div
        aria-hidden="true"
        class="z-10 flex shrink-0 items-center justify-center rounded-full bg-white ring-4 ring-white transition-all duration-200 [&>svg]:size-5 sm:[&>svg]:size-6 text-blue-600"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-dot"
          data-icon="circle-dot"
          data-prefix="far"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 512a256 256 0 1 1 0-512 256 256 0 1 1 0 512zm0-464a208 208 0 1 0 0 416 208 208 0 1 0 0-416zm0 304a96 96 0 1 1 0-192 96 96 0 1 1 0 192z"
            fill="currentColor"
          />
        </svg>
      </div>
      <span
        class="grow overflow-hidden text-left text-sm text-nowrap text-ellipsis transition-colors duration-200 sm:overflow-auto sm:text-wrap font-semibold text-blue-600"
      >
        Second Step
      </span>
    </li>
    <li
      class="relative flex grow items-start gap-3 sm:min-w-0 sm:flex-1 sm:flex-col"
    >
      <div
        aria-hidden="true"
        class="z-10 flex shrink-0 items-center justify-center rounded-full bg-white ring-4 ring-white transition-all duration-200 [&>svg]:size-5 sm:[&>svg]:size-6 text-gray-300"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle"
          data-icon="circle"
          data-prefix="far"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M464 256a208 208 0 1 0 -416 0 208 208 0 1 0 416 0zM0 256a256 256 0 1 1 512 0 256 256 0 1 1 -512 0z"
            fill="currentColor"
          />
        </svg>
      </div>
      <span
        class="grow overflow-hidden text-left text-sm font-medium text-nowrap text-ellipsis transition-colors duration-200 sm:overflow-auto sm:text-wrap text-black/60"
      >
        Third Step
        <span
          class="sr-only"
        >
          common:stepper.status.upcoming
        </span>
      </span>
    </li>
  </ol>
</div>
`;
